// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts Updater Contracts Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
  ],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Contracts Updater Contracts Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
  ],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Contracts Updater Contracts Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
  ],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Contracts Updater Contracts Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 2,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "cccccccccccccccccccccccccccccccccccccccc",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "1",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 2,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "dddddddddddddddddddddddddddddddddddddddd",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "1",
      "type": "NEP5",
      "version": "0.1",
    },
  ],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Contracts Updater Contracts Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
    Object {
      "author": "Jack Mehoff",
      "block_id": 1,
      "block_time": 15,
      "description": "eats butts",
      "email": "jackmehoff@sunpic.net",
      "id": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      "name": "test",
      "needs_storage": false,
      "parameters_raw": "param_test",
      "return_type": "test",
      "script": "test",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "type": "NEP5",
      "version": "0.1",
    },
  ],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
